--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "tsc && node dist/app.js",
     "dev": "tsc-watch --onSuccess \"node dist/app.js\"",
     "lint": "eslint . --ext .ts",
+    "tester": "tsc && node dist/tester.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
