--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^17.0.42",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
+    "@vercel/node": "^2.9.6",
     "eslint": "^8.45.0",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.1.6"
