--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "dev": "tsc-watch --onSuccess \"node dist/app.js\"",
+    "start": "tsc && node dist/src/app.js",
+    "dev": "tsc-watch --onSuccess \"node dist/src/app.js\"",
     "lint": "eslint . --ext .ts",
-    "tester": "tsc && node dist/tester.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tester": "tsc && node dist/src/tester.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "vercel deploy --prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^17.0.42",
+    "@types/node": "^20.3.0",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
